--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "intervention/image-laravel": "^1.5",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "php-flasher/flasher-laravel": "^2.1",
+        "php-flasher/flasher-toastr-laravel": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
